Restore private: false directives (publishing was failing)

--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "description": "Create PDF files on the browser and server (React v17-compatible)",
   "types": "index.d.ts",
+  "private": false,
   "author": "Diego Muracciole <diegomuracciole@gmail.com>",
   "homepage": "https://github.com/andfaulkner/react-pdf-react17support#readme",
   "main": "./lib/react-pdf.cjs.js",
